fix: improve terminal readability  - use font-family 'monospace, serif' instead of just 'monospace'    to avoid browser adjusting font size from normal fonts.    No need to set it ourselves now.  - re-enable word wrapping (disabling this was accidental...)  - darken background

--- a/Browser_IDE/stylesheet.css
+++ b/Browser_IDE/stylesheet.css
@@ -209,9 +209,9 @@ textarea {
     border:0;
     padding-left:1em;
     resize: none;
-    font-family:monospace;
-    font-size:14px;
-    white-space: pre;
+    font-family:monospace, serif;
+    white-space: pre-wrap;
+    background-color: #161616;
 }
 
 
